site/shared/style.css
main {
    padding-left: 300px;
}

@media only screen and (max-width: 992px) {
    main {
        padding-left: 0;
    }
}

.selected-item {
    background: #F2F2F2;
}

.container {
    margin-top: 16px;
}

.circle-mdi {
    width: 40px;
    height: 40px;
    vertical-align: middle;
    text-align: center;
    line-height: 40px;
}

.right-absolute {
    position: absolute;
    right: 10px;
}

.viewer {
    margin: 0 auto;
    max-width: 1280px;
    width: 90%;
    position: fixed;
    left: 5%;
}

.card {
    width: 100%;
}

@media only screen and (min-width: 601px) {
    .viewer {
        width: 85%;
        left: 7.5%;
    }
}

@media only screen and (min-width: 993px) {
    .viewer {
        width: 70%;
        left: 15%;
    }
}

